clang/test/BSC/Negative/OwnedStruct/modifier/owned-struct-static-member-function-static-modifier.cbs
// RUN: %clang_cc1 -verify %s

 owned struct A {
    int a;
    static int f() {return 0;}  // expected-error {{function declared in struct scope cannot have 'static' storage class}}
};

owned struct B {
    int a;
    static int f(B* this) {return 0;}  // expected-error {{function declared in struct scope cannot have 'static' storage class}}
};


owned struct C {
    int a;
    static int f();  // expected-error {{function declared in struct scope cannot have 'static' storage class}}
                    // expected-note@-1 {{previous declaration is here}}
};

static int C::f() { // expected-error {{static declaration of 'f' follows non-static declaration}}
    return 0;
}

owned struct D {
    int a;
    static int f(D* this); // expected-error {{function declared in struct scope cannot have 'static' storage class}}
                           // expected-note@-1 {{previous declaration is here}}
};

static int D::f(D* this) { // expected-error {{static declaration of 'f' follows non-static declaration}}
    return 0;
}
